2004-01-28  Till Kamppeter <till.kamppeter@gmx.net>

	* makeDefaults.in, foomatic-cleanupdrivers.in: Allow use of an
	  alternative Foomatic database location specifying it with the
	  FOOMATICDB environment variable.

	* Makefile.in: Added foomatic-cleanupdrivers to be installed into 
	  /usr/sbin, fixed "testing-clean" target.

	* foomatic-cleanupdrivers.in: Use default database location from
	  Defaults.pm.

2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed Tim Waugh's fix. It made an
	  "@@IEEE1284@@" appear in the PPD file when for a printer
	  no autodetection info was supplied. This made CUPS not
	  accepting the PPD.

2005-01-21  Tim Waugh <twaugh@redhat.com>

	* lib/Foomatic/DB.pm: Fixed "uninitialized value" warning (RH
	  bug #145605).

2004-11-30  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in, foomatic-ppdfile.in,
	  foomatic-compiledb.in, lib/Foomatic/DB.pm: Let Foomatic not
	  generate PPD files with blank "*FoomaticRIPCommandLine" entry.

2004-09-14  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.2. 
	  Tag name: "foomatic-db-engine-3_0_2".

	* README, USAGE: Updated for version 3.0.2.

2004-07-30  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Use the manufacturer as defined in the
	  Foomatic database and not the one from the IEEE-1284
	  auto-detection ID string for the "*Manufacturer: ..." tag of the
	  PPD files, as in the IDs the manufacturer names
	  often do not comply with the Adobe specs (as "Hewlett-Packard",
	  here "HP" has to be used).

2004-07-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Replaced mechanism for auto-detecting libxml(2).

2004-07-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated link to Adobe's PostScript specifications.

2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* README, README.build-foomatic-filters-ppds, USAGE,